rust/cubesql/cubesql/e2e/tests/snapshots/e2e__tests__mysql__select_cast(true_as_boolean)_as_bool_true_cast(false_as_boolean)_as_bool_false_1_int_as_int_str_as_str_.snap
---
source: cubesql/e2e/tests/mysql.rs
assertion_line: 180
expression: self.print_query_result(&mut response).await
---
bool_true type: (MYSQL_TYPE_TINY:1024) flags: (empty)
bool_false type: (MYSQL_TYPE_TINY:1024) flags: (empty)
int type: (MYSQL_TYPE_LONGLONG:1024) flags: (empty)
str type: (MYSQL_TYPE_STRING:1024) flags: (empty)
+-----------+------------+-----+-----+
| bool_true | bool_false | int | str |
+-----------+------------+-----+-----+
| 1         | 0          | 1   | str |
+-----------+------------+-----+-----+
