rust/cubesql/cubesql/e2e/tests/snapshots/e2e__tests__mysql__select_count(asterisk),_status,_date_trunc('month',_createdat)_from_orders_order_by_createdat.snap
---
source: cubesql/e2e/tests/mysql.rs
assertion_line: 129
expression: self.print_query_result(&mut response).await

---
+-------+------------+-------------------------+
| count | status     | createdAt               |
+-------+------------+-------------------------+
| 50    | processing | 2019-01-01T00:00:00.000 |
| 48    | completed  | 2019-01-01T00:00:00.000 |
| 57    | shipped    | 2019-01-01T00:00:00.000 |
| 34    | shipped    | 2019-02-01T00:00:00.000 |
| 39    | processing | 2019-02-01T00:00:00.000 |
| 54    | completed  | 2019-02-01T00:00:00.000 |
| 75    | processing | 2019-03-01T00:00:00.000 |
| 62    | shipped    | 2019-03-01T00:00:00.000 |
| 77    | completed  | 2019-03-01T00:00:00.000 |
| 56    | shipped    | 2019-04-01T00:00:00.000 |
| 52    | completed  | 2019-04-01T00:00:00.000 |
| 56    | processing | 2019-04-01T00:00:00.000 |
| 60    | processing | 2019-05-01T00:00:00.000 |
| 59    | shipped    | 2019-05-01T00:00:00.000 |
| 61    | completed  | 2019-05-01T00:00:00.000 |
| 74    | shipped    | 2019-06-01T00:00:00.000 |
| 86    | completed  | 2019-06-01T00:00:00.000 |
| 74    | processing | 2019-06-01T00:00:00.000 |
| 57    | processing | 2019-07-01T00:00:00.000 |
| 56    | shipped    | 2019-07-01T00:00:00.000 |
| 67    | completed  | 2019-07-01T00:00:00.000 |
| 49    | shipped    | 2019-08-01T00:00:00.000 |
| 59    | completed  | 2019-08-01T00:00:00.000 |
| 52    | processing | 2019-08-01T00:00:00.000 |
| 52    | processing | 2019-09-01T00:00:00.000 |
| 50    | shipped    | 2019-09-01T00:00:00.000 |
| 41    | completed  | 2019-09-01T00:00:00.000 |
| 58    | completed  | 2019-10-01T00:00:00.000 |
| 57    | shipped    | 2019-10-01T00:00:00.000 |
| 38    | processing | 2019-10-01T00:00:00.000 |
| 59    | processing | 2019-11-01T00:00:00.000 |
| 40    | completed  | 2019-11-01T00:00:00.000 |
| 54    | shipped    | 2019-11-01T00:00:00.000 |
| 52    | shipped    | 2019-12-01T00:00:00.000 |
| 68    | processing | 2019-12-01T00:00:00.000 |
| 69    | completed  | 2019-12-01T00:00:00.000 |
| 55    | shipped    | 2020-01-01T00:00:00.000 |
| 58    | processing | 2020-01-01T00:00:00.000 |
| 68    | completed  | 2020-01-01T00:00:00.000 |
| 63    | completed  | 2020-02-01T00:00:00.000 |
| 77    | shipped    | 2020-02-01T00:00:00.000 |
| 66    | processing | 2020-02-01T00:00:00.000 |
| 43    | completed  | 2020-03-01T00:00:00.000 |
| 50    | processing | 2020-03-01T00:00:00.000 |
| 44    | shipped    | 2020-03-01T00:00:00.000 |
| 48    | processing | 2020-04-01T00:00:00.000 |
| 41    | shipped    | 2020-04-01T00:00:00.000 |
| 44    | completed  | 2020-04-01T00:00:00.000 |
| 52    | shipped    | 2020-05-01T00:00:00.000 |
| 51    | completed  | 2020-05-01T00:00:00.000 |
| 56    | processing | 2020-05-01T00:00:00.000 |
| 52    | processing | 2020-06-01T00:00:00.000 |
| 53    | completed  | 2020-06-01T00:00:00.000 |
| 59    | shipped    | 2020-06-01T00:00:00.000 |
| 60    | shipped    | 2020-07-01T00:00:00.000 |
| 49    | processing | 2020-07-01T00:00:00.000 |
| 63    | completed  | 2020-07-01T00:00:00.000 |
| 73    | shipped    | 2020-08-01T00:00:00.000 |
| 65    | completed  | 2020-08-01T00:00:00.000 |
| 66    | processing | 2020-08-01T00:00:00.000 |
| 47    | completed  | 2020-09-01T00:00:00.000 |
| 63    | processing | 2020-09-01T00:00:00.000 |
| 54    | shipped    | 2020-09-01T00:00:00.000 |
| 68    | shipped    | 2020-10-01T00:00:00.000 |
| 70    | completed  | 2020-10-01T00:00:00.000 |
| 61    | processing | 2020-10-01T00:00:00.000 |
| 56    | shipped    | 2020-11-01T00:00:00.000 |
| 71    | completed  | 2020-11-01T00:00:00.000 |
| 47    | processing | 2020-11-01T00:00:00.000 |
| 44    | processing | 2020-12-01T00:00:00.000 |
| 63    | completed  | 2020-12-01T00:00:00.000 |
| 43    | shipped    | 2020-12-01T00:00:00.000 |
| 49    | completed  | 2021-01-01T00:00:00.000 |
| 55    | processing | 2021-01-01T00:00:00.000 |
| 64    | shipped    | 2021-01-01T00:00:00.000 |
| 45    | processing | 2021-02-01T00:00:00.000 |
| 53    | shipped    | 2021-02-01T00:00:00.000 |
| 49    | completed  | 2021-02-01T00:00:00.000 |
| 67    | shipped    | 2021-03-01T00:00:00.000 |
| 50    | processing | 2021-03-01T00:00:00.000 |
| 54    | completed  | 2021-03-01T00:00:00.000 |
| 67    | completed  | 2021-04-01T00:00:00.000 |
| 53    | processing | 2021-04-01T00:00:00.000 |
| 47    | shipped    | 2021-04-01T00:00:00.000 |
| 57    | processing | 2021-05-01T00:00:00.000 |
| 49    | shipped    | 2021-05-01T00:00:00.000 |
| 51    | completed  | 2021-05-01T00:00:00.000 |
| 46    | shipped    | 2021-06-01T00:00:00.000 |
| 53    | processing | 2021-06-01T00:00:00.000 |
| 64    | completed  | 2021-06-01T00:00:00.000 |
| 59    | processing | 2021-07-01T00:00:00.000 |
| 68    | shipped    | 2021-07-01T00:00:00.000 |
| 65    | completed  | 2021-07-01T00:00:00.000 |
| 54    | completed  | 2021-08-01T00:00:00.000 |
| 76    | processing | 2021-08-01T00:00:00.000 |
| 60    | shipped    | 2021-08-01T00:00:00.000 |
| 52    | completed  | 2021-09-01T00:00:00.000 |
| 59    | shipped    | 2021-09-01T00:00:00.000 |
| 49    | processing | 2021-09-01T00:00:00.000 |
| 56    | completed  | 2021-10-01T00:00:00.000 |
| 67    | shipped    | 2021-10-01T00:00:00.000 |
| 67    | processing | 2021-10-01T00:00:00.000 |
| 56    | processing | 2021-11-01T00:00:00.000 |
| 43    | completed  | 2021-11-01T00:00:00.000 |
| 57    | shipped    | 2021-11-01T00:00:00.000 |
| 63    | processing | 2021-12-01T00:00:00.000 |
| 52    | shipped    | 2021-12-01T00:00:00.000 |
| 55    | completed  | 2021-12-01T00:00:00.000 |
| 61    | processing | 2022-01-01T00:00:00.000 |
| 52    | completed  | 2022-01-01T00:00:00.000 |
| 61    | shipped    | 2022-01-01T00:00:00.000 |
| 41    | completed  | 2022-02-01T00:00:00.000 |
| 51    | processing | 2022-02-01T00:00:00.000 |
| 43    | shipped    | 2022-02-01T00:00:00.000 |
| 66    | processing | 2022-03-01T00:00:00.000 |
| 73    | shipped    | 2022-03-01T00:00:00.000 |
| 66    | completed  | 2022-03-01T00:00:00.000 |
| 61    | shipped    | 2022-04-01T00:00:00.000 |
| 82    | completed  | 2022-04-01T00:00:00.000 |
| 60    | processing | 2022-04-01T00:00:00.000 |
| 83    | processing | 2022-05-01T00:00:00.000 |
| 64    | completed  | 2022-05-01T00:00:00.000 |
| 66    | shipped    | 2022-05-01T00:00:00.000 |
| 43    | shipped    | 2022-06-01T00:00:00.000 |
| 48    | processing | 2022-06-01T00:00:00.000 |
| 56    | completed  | 2022-06-01T00:00:00.000 |
| 67    | processing | 2022-07-01T00:00:00.000 |
| 61    | shipped    | 2022-07-01T00:00:00.000 |
| 54    | completed  | 2022-07-01T00:00:00.000 |
| 51    | shipped    | 2022-08-01T00:00:00.000 |
| 46    | completed  | 2022-08-01T00:00:00.000 |
| 48    | processing | 2022-08-01T00:00:00.000 |
| 56    | shipped    | 2022-09-01T00:00:00.000 |
| 47    | processing | 2022-09-01T00:00:00.000 |
| 62    | completed  | 2022-09-01T00:00:00.000 |
| 65    | completed  | 2022-10-01T00:00:00.000 |
| 62    | shipped    | 2022-10-01T00:00:00.000 |
| 68    | processing | 2022-10-01T00:00:00.000 |
| 59    | shipped    | 2022-11-01T00:00:00.000 |
| 63    | processing | 2022-11-01T00:00:00.000 |
| 63    | completed  | 2022-11-01T00:00:00.000 |
| 48    | shipped    | 2022-12-01T00:00:00.000 |
| 55    | completed  | 2022-12-01T00:00:00.000 |
| 70    | processing | 2022-12-01T00:00:00.000 |
| 73    | processing | 2023-01-01T00:00:00.000 |
| 48    | completed  | 2023-01-01T00:00:00.000 |
| 66    | shipped    | 2023-01-01T00:00:00.000 |
| 44    | completed  | 2023-02-01T00:00:00.000 |
| 40    | processing | 2023-02-01T00:00:00.000 |
| 67    | shipped    | 2023-02-01T00:00:00.000 |
| 73    | processing | 2023-03-01T00:00:00.000 |
| 50    | shipped    | 2023-03-01T00:00:00.000 |
| 69    | completed  | 2023-03-01T00:00:00.000 |
| 40    | completed  | 2023-04-01T00:00:00.000 |
| 41    | processing | 2023-04-01T00:00:00.000 |
| 33    | shipped    | 2023-04-01T00:00:00.000 |
| 53    | shipped    | 2023-05-01T00:00:00.000 |
| 63    | completed  | 2023-05-01T00:00:00.000 |
| 55    | processing | 2023-05-01T00:00:00.000 |
| 67    | shipped    | 2023-06-01T00:00:00.000 |
| 50    | completed  | 2023-06-01T00:00:00.000 |
| 66    | processing | 2023-06-01T00:00:00.000 |
| 55    | shipped    | 2023-07-01T00:00:00.000 |
| 48    | processing | 2023-07-01T00:00:00.000 |
| 71    | completed  | 2023-07-01T00:00:00.000 |
| 55    | processing | 2023-08-01T00:00:00.000 |
| 57    | completed  | 2023-08-01T00:00:00.000 |
| 62    | shipped    | 2023-08-01T00:00:00.000 |
| 56    | completed  | 2023-09-01T00:00:00.000 |
| 58    | shipped    | 2023-09-01T00:00:00.000 |
| 71    | processing | 2023-09-01T00:00:00.000 |
| 66    | shipped    | 2023-10-01T00:00:00.000 |
| 62    | completed  | 2023-10-01T00:00:00.000 |
| 73    | processing | 2023-10-01T00:00:00.000 |
| 4     | processing | 2023-11-01T00:00:00.000 |
| 8     | completed  | 2023-11-01T00:00:00.000 |
| 8     | shipped    | 2023-11-01T00:00:00.000 |
+-------+------------+-------------------------+
