rust/cubesql/cubesql/e2e/tests/snapshots/e2e__tests__mysql__select_count(asterisk),_status,_date_trunc('quarter',_createdat)_from_orders_order_by_createdat.snap
---
source: cubesql/e2e/tests/mysql.rs
assertion_line: 129
expression: self.print_query_result(&mut response).await

---
+-------+------------+-------------------------+
| count | status     | createdAt               |
+-------+------------+-------------------------+
| 179   | completed  | 2019-01-01T00:00:00.000 |
| 164   | processing | 2019-01-01T00:00:00.000 |
| 153   | shipped    | 2019-01-01T00:00:00.000 |
| 199   | completed  | 2019-04-01T00:00:00.000 |
| 189   | shipped    | 2019-04-01T00:00:00.000 |
| 190   | processing | 2019-04-01T00:00:00.000 |
| 155   | shipped    | 2019-07-01T00:00:00.000 |
| 167   | completed  | 2019-07-01T00:00:00.000 |
| 161   | processing | 2019-07-01T00:00:00.000 |
| 163   | shipped    | 2019-10-01T00:00:00.000 |
| 165   | processing | 2019-10-01T00:00:00.000 |
| 167   | completed  | 2019-10-01T00:00:00.000 |
| 174   | completed  | 2020-01-01T00:00:00.000 |
| 176   | shipped    | 2020-01-01T00:00:00.000 |
| 174   | processing | 2020-01-01T00:00:00.000 |
| 156   | processing | 2020-04-01T00:00:00.000 |
| 148   | completed  | 2020-04-01T00:00:00.000 |
| 152   | shipped    | 2020-04-01T00:00:00.000 |
| 178   | processing | 2020-07-01T00:00:00.000 |
| 175   | completed  | 2020-07-01T00:00:00.000 |
| 187   | shipped    | 2020-07-01T00:00:00.000 |
| 167   | shipped    | 2020-10-01T00:00:00.000 |
| 152   | processing | 2020-10-01T00:00:00.000 |
| 204   | completed  | 2020-10-01T00:00:00.000 |
| 150   | processing | 2021-01-01T00:00:00.000 |
| 152   | completed  | 2021-01-01T00:00:00.000 |
| 184   | shipped    | 2021-01-01T00:00:00.000 |
| 163   | processing | 2021-04-01T00:00:00.000 |
| 142   | shipped    | 2021-04-01T00:00:00.000 |
| 182   | completed  | 2021-04-01T00:00:00.000 |
| 187   | shipped    | 2021-07-01T00:00:00.000 |
| 184   | processing | 2021-07-01T00:00:00.000 |
| 171   | completed  | 2021-07-01T00:00:00.000 |
| 154   | completed  | 2021-10-01T00:00:00.000 |
| 186   | processing | 2021-10-01T00:00:00.000 |
| 176   | shipped    | 2021-10-01T00:00:00.000 |
| 159   | completed  | 2022-01-01T00:00:00.000 |
| 177   | shipped    | 2022-01-01T00:00:00.000 |
| 178   | processing | 2022-01-01T00:00:00.000 |
| 202   | completed  | 2022-04-01T00:00:00.000 |
| 191   | processing | 2022-04-01T00:00:00.000 |
| 170   | shipped    | 2022-04-01T00:00:00.000 |
| 162   | processing | 2022-07-01T00:00:00.000 |
| 162   | completed  | 2022-07-01T00:00:00.000 |
| 168   | shipped    | 2022-07-01T00:00:00.000 |
| 183   | completed  | 2022-10-01T00:00:00.000 |
| 201   | processing | 2022-10-01T00:00:00.000 |
| 169   | shipped    | 2022-10-01T00:00:00.000 |
| 161   | completed  | 2023-01-01T00:00:00.000 |
| 186   | processing | 2023-01-01T00:00:00.000 |
| 183   | shipped    | 2023-01-01T00:00:00.000 |
| 153   | shipped    | 2023-04-01T00:00:00.000 |
| 162   | processing | 2023-04-01T00:00:00.000 |
| 153   | completed  | 2023-04-01T00:00:00.000 |
| 184   | completed  | 2023-07-01T00:00:00.000 |
| 175   | shipped    | 2023-07-01T00:00:00.000 |
| 174   | processing | 2023-07-01T00:00:00.000 |
| 74    | shipped    | 2023-10-01T00:00:00.000 |
| 70    | completed  | 2023-10-01T00:00:00.000 |
| 77    | processing | 2023-10-01T00:00:00.000 |
+-------+------------+-------------------------+
