rust/cubesql/cubesql/e2e/tests/snapshots/e2e__tests__mysql__select_count(asterisk),_status_from_orders.snap
---
source: cubesql/e2e/tests/mysql.rs
assertion_line: 129
expression: self.print_query_result(&mut response).await

---
+-------+------------+
| count | status     |
+-------+------------+
| 3354  | processing |
| 3346  | completed  |
| 3300  | shipped    |
+-------+------------+
