rust/cubesql/cubesql/e2e/tests/snapshots/e2e__tests__mysql__select_count(asterisk)_count,_status_from_orders_group_by_status.snap
---
source: cubesql/e2e/tests/mysql.rs
assertion_line: 186
expression: self.print_query_result(&mut response).await
---
count type: (MYSQL_TYPE_BLOB:1024) flags: (empty)
status type: (MYSQL_TYPE_BLOB:1024) flags: (empty)
+-------+------------+
| count | status     |
+-------+------------+
| 3354  | processing |
| 3346  | completed  |
| 3300  | shipped    |
+-------+------------+
